[package]
authors = ["Alexi Peck"]
categories = []
description = "A library of functions, traits, serde implementations for error handling, logging, hashing and datetime's."
edition = "2021"
exclude = ["/target", "main.rs"]
license = "MIT"
name = "peck-lib"
repository = "https://github.com/alexipeck/peck-lib/"
version = "1.1.2"

[features]
complete = ["datetime", "env", "hashing", "http", "locking", "logging", "smtp", "uid", "crypto", "auth"]
default = []

auth = ["serde", "serde_json", "rsa", "email_address", "aead", "datetime", "chrono", "thiserror"]
crypto = ["blake3", "rand", "rand_chacha", "rand_core", "chrono"]
datetime = []
env = []
hashing = ["blake3"]
http = ["reqwest", "thiserror", "serde", "serde_json", "tracing", "lazy_static"]
#http_wasm = ["reqwest-wasm", "thiserror", "serde", "serde_json", "tracing"]
locking = ["tokio", "parking_lot", "futures-util"]
logging = ["chrono", "serde", "tracing", "tracing-subscriber", "tokio", "reqwest"]
smtp = ["lettre", "thiserror"]
uid = ["tokio", "uuid", "thiserror"]

[dependencies]
aead = {version = "0.5.2", features = ["getrandom"], optional = true}
blake3 = {version = "1.5.1", optional = true}
chrono = {version = "0.4.38", optional = true}
email_address = {version = "0.2.4", features = ["serde_support"], optional = true}
futures-util = {version = "0.3.30", optional = true}
lazy_static = {version = "1.4.0", optional = true}
lettre = {version = "0.11.7", optional = true}
parking_lot = {version = "0.12.2", optional = true}
rand = {version = "0.8.5", optional = true}
rand_chacha = {version = "0.3.1", optional = true}
rand_core = {version = "0.6.4", features = ["getrandom"], optional = true}
rsa = {version = "0.9.6", features = ["sha2", "serde", "std"], optional = true}
serde = {version = "1.0.202", features = ["derive"], optional = true}
serde_json = {version = "1.0.117", optional = true}
thiserror = {version = "1.0.61", optional = true}
tokio = {version = "1.37.0", features = ["sync"], optional = true}
tracing = {version = "0.1.40", optional = true}
tracing-subscriber = {version = "0.3.18", optional = true}
uuid = {version = "1.8.0", features = ["js", "v4", "serde"], optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest-wasm = {version = "0.11.16", features = ["json"], default-features = false}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = {version = "0.12.4", features = ["json"], optional = true, default-features = false}
